Fixes text overflow

--- a/src/styles/partials/stats.scss
+++ b/src/styles/partials/stats.scss
@@ -103,7 +103,7 @@
 
     @include media.md-up {
       margin-top: 18px;
-      max-width: 10em;
+      //max-width: 10em;
       font-size: 16px;
       line-height: 1.2;
     }
